@@ -3,6 +3,7 @@
 - Fix SNI handling for HTTP server.
 - Include server URL for HTTP client IOException.
 - Log full stack trace for discovery client errors.
+- Allow trailing slash for discovery client URI.
 
 205
 
